# ELIZA

./: .gitignore  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
doc/: ELIZA.odt
scripts/: example.eliza  minimal.eliza  nano.eliza  original.eliza  simplified.eliza
src/eliza/: core.py  exceptions.py  helpers.py  logger.py  logic.py  main.py  model.py  parser.py  rules.py  utils.py
tests/: test_ElizaReassembly.py  test_ElizaRule.py  test_SPLIT_REGEX.py  test_WORD_RE.py  test_core.py  test_drule_to_regex.py  test_logic.py  test_parser.py  test_rrule_to_fstring.py
